--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "recipe-search",
   "version": "0.1.0",
+  "homepage": "http://avalos010.github.io/github-recipe",
   "private": true,
   "dependencies": {
     "react": "^16.8.0-alpha.0",
@@ -11,6 +12,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -21,5 +24,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
